# CollectionDocs

./: .devcontainer.json  .editorconfig  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: cf.yml
source/: 404.rst  conf.py
source/_templates/: footer.html
source/core/: check_os_module.rst  check_role_args_module.rst  index.rst  logger_module.rst  shell_module.rst  view_log_module.rst
source/demo/: index.rst  my_demo_module.rst
source/foreman/: ansible_api_ansible_inventories_hostgroups_module.rst  ansible_api_ansible_inventories_hostgroups_post_module.rst  ansible_api_ansible_inventories_hosts_module.rst  ansible_api_ansible_inventories_hosts_post_module.rst  ansible_api_ansible_inventories_schedule_post_module.rst  ansible_api_ansible_override_values_id_delete_module.rst  ansible_api_ansible_override_values_post_module.rst  ansible_api_ansible_roles_fetch_module.rst  ansible_api_ansible_roles_id_delete_module.rst  ansible_api_ansible_roles_id_module.rst  ansible_api_ansible_roles_module.rst  ansible_api_ansible_roles_sync_put_module.rst  ansible_api_ansible_variables_id_delete_module.rst  ansible_api_ansible_variables_id_module.rst  ansible_api_ansible_variables_id_put_module.rst  ansible_api_ansible_variables_module.rst  ansible_api_ansible_variables_obsolete_put_module.rst  ansible_api_ansible_variables_post_module.rst  api_architectures_architecture_id_images_id_module.rst  api_architectures_architecture_id_images_module.rst  api_architectures_architecture_id_operatingsystems_module.rst  api_architectures_id_module.rst  (+521 more)
(+23 files in other folders)
